Unms/unms-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unms-controller
  name: unms-controller
  namespace: unms
spec:
  type: NodePort
  selector:
    app: unms-controller
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31001  # Choose an available node port that doesn't conflict
    - name: "https"
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 31002  # Choose an available node port that doesn't conflict
    - name: "netflow"
      port: 2055
      protocol: UDP
      targetPort: 2055
      nodePort: 31002  # Choose an available node port that doesn't conflict
  externalIPs:
    - "192.168.3.23"
